fix layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ nav a {
 	    padding-top: .2em;
     	padding-bottom: .2em;
 	    padding-right: .5em;
-    	padding-left: 0em;
+    	padding-left: .5em;
 
         margin-top: .5em;
         margin-left: 0;
@@ -149,6 +149,8 @@ nav a.active {
     font-family: SourceSansPro, "Helvetica Neue", sans-serif;
     font-weight: 200;
 
+    line-height: 1em;
+
     padding-bottom: 1em;
 }
 
@@ -172,5 +174,3 @@ footer li {
 	margin-left: .3em;
 	color: #bbbbbb;
 }
-
-
